# netcam

./: CMakeLists.txt  main.cpp
includes/: core.hpp  git_version.h.in
